# 3-automation-projects-bk

./: .breakpoints  .gitignore  .replit  news_api_client.py  news_automator.py  pyproject.toml  replit.nix  voice_record_test_bk.py  voice_to_text.py
